AUTOMAKE_OPTIONS=foreign
bin_PROGRAMS=main
main_SOURCES=main.cpp XGUI/src/gui/XWidget.cpp XGUI/src/gui/XLayout.cpp \
		XGUI/src/gui/XVBoxLayout.cpp XGUI/src/gui/XApplication.cpp \
		XGUI/src/gui/XButton.cpp XGUI/src/gui/XHBoxLayout.cpp XGUI/src/gui/XFont.cpp \
		XGUI/src/gui/XMessageBox.cpp XGUI/src/gui/XCheckBox.cpp \
		XGUI/src/gui/XEditBox.cpp XGUI/src/gui/XLabel.cpp XGUI/src/gui/XAbstractWidegt.cpp \
		XGUI/src/gui/XListBox.cpp XGUI/src/gui/XItem.cpp \
		XGUI/src/gui/XVScrollbar.cpp XGUI/src/gui/XRadioButton.cpp XGUI/src/gui/XToolTip.cpp \
		XGUI/src/gui/XPopMenu.cpp XGUI/src/gui/XDialog.cpp  \
		XGUI/src/util/XObject.cpp XGUI/src/util/XStringArray.cpp XGUI/src/util/XUseful.cpp \
		XGUI/include/XList.h XGUI/include/XUtils.h XGUI/include/XArray.h \
		XGUI/include/XEventType.h\
		XGUI/include/XWidget.h XGUI/include/XLayout.h  XGUI/include/XLayout.h \
		XGUI/include/XVBoxLayout.h XGUI/include/XApplication.h XGUI/include/XToolTip.h \
		XGUI/include/XButton.h XGUI/include/XAbstractWidegt.h XGUI/include/XHBoxLayout.h \
		XGUI/include/XFont.h XGUI/include/XMessageBox.h \
		XGUI/include/XCheckBox.h XGUI/include/XRidioButton.h XGUI/include/XPopMenu.h XGUI/include/XDialog.h \
		XGUI/include/XEditBox.h XGUI/include/XLabel.h XGUI/include/XListBox.h XGUI/include/XItem.h \
		XGUI/include/XVScrollbar.h XGUI/include/XObject.h XGUI/include/XStringArray.h \
		XGUI/include/XUseful.h
